--- a/appdev/A1assignment/meggieA1assignment/hospital.html
+++ b/appdev/A1assignment/meggieA1assignment/hospital.html
@@ -3,10 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>A1 Assignment</title>
 </head>
 <body>
-    
+
+    <h1></h1>
+    <h2></h2>
+    <ul>
+        <li></li>
+        <li></li>
+        <li></li>
+    </ul>
+        
+
+
+
 <script src="main.js"></script>
 
 </body>
