--- a/appdev/HTMLassignment/homepage.html
+++ b/appdev/HTMLassignment/homepage.html
@@ -16,7 +16,10 @@
         <li>Contact</li>
     </ul>
 
-    <h2 id="featArticle">featured article</h2>
+    <article id="featArticle">
+    <h2 id="featArticleTitle">featured article</h2>
+
+    </article>
 
 
         
