strugglebus hours at the assignment

--- a/appdev/HTMLassignment/about.html
+++ b/appdev/HTMLassignment/about.html
@@ -12,31 +12,28 @@
     <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
         
-    <title>IMM news network homepage</title>
+    <title>IMM news network about</title>
 
 </head>
+
 <body>
+
+    <h1 id="mainTitle">welcome title</h1>
 
     <section id="header">
         <img src="assets/cat.png">
         <ul id="navList">
-            <li>Home</li>
-            <li>About</li>
-            <li>Contact</li>
+            <li><a href="homepage.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
         </ul>
     </section>
 
-    <h1 id="title">welcome title</h1>
-    <h2>About</h2>
-    <p>paragraph about site</p>
+    <h2 id="aboutHeader"></h2>
+    <p id="aboutP">paragraph about site</p>
 
 
-    <a href="homepage.html">Go Back</a>
-
-     <section id="footer">footer
-        <p id="cookieP">cookie info</p>
-        <a href="#">cookie link</a>
-    </section>
+    <a href="homepage.html">Back to homepage</a>
 
 
 
