--- a/appdev/HTMLassignment/homepage.html
+++ b/appdev/HTMLassignment/homepage.html
@@ -10,7 +10,6 @@
     <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
         
     <title>IMM news network homepage</title>
 
@@ -23,35 +22,39 @@
     <section id="header">
         <img src="assets/cat.png">
         <ul id="navList">
-            <li><a href="https://oakvilleguitaracademy.ca/"></a>Home</li>
-            <li><a href="https://oakvilleguitaracademy.ca/"></a>About</li>
-            <li><a href="https://oakvilleguitaracademy.ca/"></a>Contact</li>
+            <li><a href="homepage.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
         </ul>
     </section>
 
     <article id="featArticle">
-        <h2 id="featArticleTitle"><a href="https://oakvilleguitaracademy.ca/" target="_blank"></a> featured article</h2>
-        <img src="path/to/image.jpg" alt="Text description of the image" id="featArtImage">
+        <!-- <h2 id="featArticleTitle"> featured article</h2>
+        <a href="" target="_blank" id="featArtLink">link to article</a>
+        <img src="" id="featArtImage">
         <p id="featArtAuthor">author name</p>
-        <p id="featArtPreview">preview text</p>
+        <p id="featArtPreview">preview text</p> -->
     </article>
 
 
     <section id="articleCategories">
         <article id="article">
-            <h2 id="articleTitle">article</h2>
+            <!-- <h2 id="articleTitle">article</h2>
             <img src="path/to/image.jpg" alt="Text description of the image" id="image">
             <a href="path/to/resource.html" target="_blank">Link to article</a>
             <p id="articleAuthor">author name</p>
-            <p id="articlePreview">preview text</p>
+            <p id="articlePreview">preview text</p> -->
         </article>      
     </section>
 
 
 
-    <video controls width="250">
-        <source src="path/to/video.webm" type="video/webm" /> 
-        <source src="path/to/video.mp4" type="video/mp4" />
+    <video controls width="250" id="video">
+        <p><iframe width="560" height="315" src="https://www.youtube.com/embed/zusn3JtpFDk" 
+        title="" frameBorder="0"   
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"  
+        allowFullScreen><br>Powered by <a href="https://youtubeembedcode.com">how to embed youtube video</a>
+        and <a href="https://skipboregler.com/skip-bo-regras/">skip bo regras</a></iframe></p>
      </video>
 
 
