--- a/appdev/HTMLassignment/about.html
+++ b/appdev/HTMLassignment/about.html
@@ -10,7 +10,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
+
         
     <title>IMM news network about</title>
 
@@ -18,7 +18,7 @@
 
 <body>
 
-    <h1 id="mainTitle">welcome title</h1>
+    <h1 id="title">welcome title</h1>
 
     <section id="header">
         <img src="assets/cat.png">
