--- a/appdev/HTMLassignment/homepage.html
+++ b/appdev/HTMLassignment/homepage.html
@@ -48,15 +48,9 @@
     </section>
 
 
-
-    <video controls width="250" id="video">
-        <p><iframe width="560" height="315" src="https://www.youtube.com/embed/zusn3JtpFDk" 
-        title="" frameBorder="0"   
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"  
-        allowFullScreen><br>Powered by <a href="https://youtubeembedcode.com">how to embed youtube video</a>
-        and <a href="https://skipboregler.com/skip-bo-regras/">skip bo regras</a></iframe></p>
-     </video>
-
+    <section>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/bkuDXqNv-GY?si=eWins3K7oPo7rpJe" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    </section>
 
 
     <table id="visitorTable">Site Visitors
