--- a/appdev/HTMLassignment/contact.html
+++ b/appdev/HTMLassignment/contact.html
@@ -11,7 +11,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
 
-    <title>IMM news network contact</title>
+    <title>IMM news network Contact</title>
 </head>
 
 
@@ -33,7 +33,7 @@
 
 
 
-    <form action="" method="">
+    <form action="process-contact.php" method="post" name="form">
 
         <fieldset>
             <legend>Contact Us</legend>
@@ -41,33 +41,33 @@
             <fieldset>
                 <legend>Name</legend>
                 <label for = "firstName">Label for first name</label>
-                <input type="text" name="firstName" placeholder="first name">
+                <input type="text" name="firstName" id = "firstName" placeholder="first name">
         
                 <label for = "lastName">Label for last name</label>
-                <input type="text" name="lastName"  placeholder="last name">
+                <input type="text" name="lastName" id="lastName" placeholder="last name">
 
                 <label for = "email">Label for email</label>
-                <input type="text" name="email"  placeholder="email">
+                <input type="text" name="email" id="email"  placeholder="email">
             </fieldset>
 
             <fieldset>
                 <legend>Category Interests</legend>
                 <label for ="checkIndust">Industry</label>
-                <input type = "checkbox" name ="Industry">
+                <input type = "checkbox" name ="Industry" id="checkIndust">
 
                 <label for ="checkTech">Technical</label>
-                <input type = "checkbox" name ="Technical">
+                <input type = "checkbox" name ="Technical" id="checkTech">
 
                 <label for ="checkCareer">Career</label>
-                <input type = "checkbox" name ="Career">
+                <input type = "checkbox" name ="Career" id="checkCareer">
             </fieldset>
 
             <fieldset>
                 <legend>Role</legend>
                     <select name ="role"> 
-                        <option value="ca"> Writer </option>
-                        <option value="us"> Contributor </option>
-                        <option value="mx"> Administrator </option>
+                        <option value="1"> Writer </option>
+                        <option value="2"> Contributor </option>
+                        <option value="3"> Administrator </option>
                     </select>
             </fieldset>
 
