--- a/appdev/CSSassignmentmeggie/homepage.html
+++ b/appdev/CSSassignmentmeggie/homepage.html
@@ -20,7 +20,7 @@
         
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="main.css">
 
@@ -28,6 +28,8 @@
 
 </head>
 <body>
+
+    <div id="bg"></div>
 
     <h1 id="title">welcome title</h1>
     <p id="introPara">intro paragraph</p>
@@ -41,36 +43,34 @@
         </ul>
     </section>
 
-    <article id="featArticle">
-        <!-- <h2 id="featArticleTitle"> featured article</h2>
-        <a href="" target="_blank" id="featArtLink">link to article</a>
-        <img src="" id="featArtImage">
-        <p id="featArtAuthor">author name</p>
-        <p id="featArtPreview">preview text</p> -->
-    </article>
+    <div id="feed">
+        <article id="featArticle">
+            <!-- <h2 id="featArticleTitle"> featured article</h2>
+            <a href="" target="_blank" id="featArtLink">link to article</a>
+            <img src="" id="featArtImage">
+            <p id="featArtAuthor">author name</p>
+            <p id="featArtPreview">preview text</p> -->
+        </article>
 
 
-    <section id="articleCategories">
-        <article id="article">
-            <!-- <h2 id="articleTitle">article</h2>
-            <img src="path/to/image.jpg" alt="Text description of the image" id="image">
-            <a href="path/to/resource.html" target="_blank">Link to article</a>
-            <p id="articleAuthor">author name</p>
-            <p id="articlePreview">preview text</p> -->
-        </article>      
-    </section>
+        <section id="articleCategories">      
+        </section>
+ 
 
 
     <section>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/bkuDXqNv-GY?si=eWins3K7oPo7rpJe" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </section>
 
+</div>
 
     <table id="visitorTable">Site Visitors
         <tr>
            <td></td> 
         </tr>
      </table>
+
+
 
 
     <section id="footer">footer
