honestly i have no idea

--- a/appdev/CSSassignmentmeggie/homepage.html
+++ b/appdev/CSSassignmentmeggie/homepage.html
@@ -29,13 +29,11 @@
 </head>
 <body>
 
-    <div id="bg"></div>
-
     <h1 id="title">welcome title</h1>
     <p id="introPara">intro paragraph</p>
 
     <section id="header">
-        <img src="assets/cat.png">
+        <img id="cat" src="assets/cat.png">
         <ul id="navList">
             <li><a href="homepage.html">Home</a></li>
             <li><a href="about.html">About</a></li>
