--- a/appdev/CSSassignmentmeggie/contact.html
+++ b/appdev/CSSassignmentmeggie/contact.html
@@ -18,6 +18,11 @@
     <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
+
+
     <link rel="stylesheet" href="main.css">
 
     <title>IMM news network Contact</title>
@@ -29,7 +34,7 @@
     <h1 id="title">welcome title</h1>
 
     <section id="header">
-        <img src="assets/cat.png">
+        <img id="cat" src="assets/cat.png">
         <ul id="navList">
             <li><a href="homepage.html">Home</a></li>
             <li><a href="about.html">About</a></li>
@@ -37,9 +42,8 @@
         </ul>
     </section>
 
+    <div id="content">
     <h2 id="contactHeader"></h2>
-
-
 
 
     <form action="process-contact.php" method="post" name="form">
@@ -88,6 +92,8 @@
 
 
     <a href="homepage.html">Back to homepage</a>
+
+    </div>  
 
 
 
